releases/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.gabook.cn
      http:
        paths:
          - path: /auth
            backend:
              serviceName: auth
              servicePort: 80
          - path: /order
            backend:
              serviceName: order
              servicePort: 80
          - path: /product
            backend:
              serviceName: product
              servicePort: 80
          - path: /supplier
            backend:
              serviceName: supplier
              servicePort: 80
